--- a/package.json
+++ b/package.json
@@ -1,58 +1,61 @@
 {
-	"name": "music-player",
-	"main": "expo-router/entry",
-	"version": "1.0.0",
-	"scripts": {
-		"start": "expo start",
-		"reset-project": "node ./scripts/reset-project.js",
-		"android": "expo run:android",
-		"ios": "expo run:ios",
-		"web": "expo start --web",
-		"lint": "eslint ."
-	},
-	"dependencies": {
-		"@emotion/react": "^11.14.0",
-		"@emotion/styled": "^11.14.1",
-		"@expo/vector-icons": "^15.0.2",
-		"@mui/icons-material": "^7.3.4",
-		"@mui/material": "^7.3.4",
-		"@react-navigation/bottom-tabs": "^7.4.0",
-		"@react-navigation/elements": "^2.6.3",
-		"@react-navigation/native": "^7.1.8",
-		"expo": "~54.0.12",
-		"expo-constants": "~18.0.9",
-		"expo-font": "~14.0.8",
-		"expo-haptics": "~15.0.7",
-		"expo-image": "~3.0.9",
-		"expo-linking": "~8.0.8",
-		"expo-router": "~6.0.10",
-		"expo-splash-screen": "~31.0.10",
-		"expo-status-bar": "~3.0.8",
-		"expo-symbols": "~1.0.7",
-		"expo-system-ui": "~6.0.7",
-		"expo-web-browser": "~15.0.8",
-		"react": "19.1.0",
-		"react-dom": "19.1.0",
-		"react-native": "0.81.4",
-		"react-native-gesture-handler": "~2.28.0",
-		"react-native-paper": "^5.14.5",
-		"react-native-reanimated": "~4.1.1",
-		"react-native-safe-area-context": "~5.6.0",
-		"react-native-screens": "~4.16.0",
-		"react-native-svg": "^15.12.1",
-		"react-native-web": "~0.21.0",
-		"react-native-worklets": "0.5.1"
-	},
-	"devDependencies": {
-		"@types/react": "~19.1.0",
-		"@typescript-eslint/eslint-plugin": "^8.45.0",
-		"@typescript-eslint/parser": "^8.45.0",
-		"eslint": "^9.37.0",
-		"eslint-config-expo": "~10.0.0",
-		"eslint-plugin-react": "^7.37.5",
-		"eslint-plugin-react-hooks": "^6.1.1",
-		"typescript": "~5.9.2"
-	},
-	"private": true,
-	"type": "module"
+  "name": "music-player",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.8",
+    "expo": "~54.0.12",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.15",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.10",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-loader-kit": "^3.0.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
+  },
+  "devDependencies": {
+    "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "eslint": "^9.37.0",
+    "eslint-config-expo": "~10.0.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.1",
+    "typescript": "~5.9.2"
+  },
+  "private": true,
+  "type": "module"
 }
