--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
@@ -35,7 +36,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-awesome-slider": "^2.9.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-image-colors": "^2.5.0",
     "react-native-loader-kit": "^3.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
@@ -54,6 +57,7 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.1",
+    "ts-pattern": "^5.8.0",
     "typescript": "~5.9.2"
   },
   "private": true,
