--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"allowImportingTsExtensions": true
 	},
 	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules/**"]
 }
