--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
     "@expo/vector-icons": "^15.0.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
-    "@react-native-menu/menu": "^2.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.2",
-    "expo": "~54.0.12",
+    "expo": "54.0.21",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.15",
+    "expo-dev-client": "~6.0.16",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-awesome-slider": "^2.9.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-colors": "^2.5.0",
     "react-native-loader-kit": "^3.0.0",
     "react-native-paper": "^5.14.5",
+    "react-native-popup-menu": "^0.18.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-track-player": "^5.0.0-alpha0-nightly-359af5a12d712d3b685530aed9b9625865a25d74",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^6.1.1",
     "ts-pattern": "^5.8.0",
+    "tsx": "^4.20.6",
     "typescript": "~5.9.2"
   },
   "private": true,
